crates/svm-sdk-tests/tests/app/declaring_traits_not_allowed.rs
use svm_sdk::app;

#[app]
mod App {
    trait Print {}
}

fn main() {}
